fix: switcher scrollable on small screens

--- a/app/component/navigation.scss
+++ b/app/component/navigation.scss
@@ -44,6 +44,12 @@ $content-background-color: $background-color;
 #mainContent .desktop {
   // so that the layer selector bubble doesn't cause scroll bars
   overflow: hidden;
+  height: 100%;
+  display: flex;
+  flex-basis: 0px;
+  flex-direction: row;
+  flex-grow: 1;
+  flex-shrink: 0;
 }
 
 .top-bar-login {
